--- a/buildSrc/gradle.properties
+++ b/buildSrc/gradle.properties
@@ -1,4 +1,3 @@
 # https://docs.gradle.org/current/userguide/build_environment.html#sec:gradle_configuration_properties
 
-org.gradle.configuration-cache=true
-org.gradle.jvmargs=-Xmx1g "-XX:MaxMetaspaceSize=512m"
+spotlessVersion = 7.0.2
